--- a/main.ipynb
+++ b/main.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,12 +363,12 @@
     "  # print(encode(r['surname'], max_length=10, zero_pad=True))\n",
     "  return s\n",
     "def is_duplicate(r1: Dict[Hashable, Any], r2: Dict[Hashable, Any]) -> bool:\n",
-    "  return get_jaccard_sim(r1, r2) > 0.85"
+    "  return get_jaccard_sim(r1, r2) > 0.7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
     "    a_id = a['rec_id']\n",
     "    b_id = b['rec_id']\n",
     "    if a_id == b_id:\n",
-    "      # print(f'ERROR: {a_id}, {b_id}')\n",
+    "      print(f'ERROR: {a_id}, {b_id}')\n",
     "      continue\n",
     "    a_key = get_key(a_id)\n",
     "    b_key = get_key(b_id)\n",
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,17 +422,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tp: 413, fp: 0, fn: 124\n",
+      "tp: 498, fp: 0, fn: 39\n",
       "precision: 1.0\n",
-      "recall: 0.7690875232774674\n",
-      "f1: 0.8694736842105263\n"
+      "recall: 0.9273743016759777\n",
+      "f1: 0.9623188405797102\n"
      ]
     }
    ],
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -558,6 +558,67 @@
       "precision: 0.9373881932021467\n",
       "recall: 0.9757914338919925\n",
       "f1: 0.9562043795620438\n"
+     ]
+    }
+   ],
+   "source": [
+    "res_stats(res, expected_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from snm import sorted_neighborhood"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def snm_key(r: Dict[Hashable, Any]) -> str:\n",
+    "  name = r['given_name']\n",
+    "  sur = r['surname']\n",
+    "  if name is None:\n",
+    "    name = ''\n",
+    "  elif name != '':\n",
+    "    name = encode(name, max_length=10, zero_pad=True)\n",
+    "  if sur is None:\n",
+    "    sur = ''\n",
+    "  elif sur != '':\n",
+    "    sur = encode(sur, max_length=10, zero_pad=True)\n",
+    "  s = f'{name}{sur}'\n",
+    "  if s == '':\n",
+    "    return '0'*10\n",
+    "  return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = sorted_neighborhood(data_list, snm_key, get_jaccard_sim, 10, 0.7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tp: 459, fp: 0, fn: 78\n",
+      "precision: 1.0\n",
+      "recall: 0.8547486033519553\n",
+      "f1: 0.9216867469879518\n"
      ]
     }
    ],
