--- a/main.ipynb
+++ b/main.ipynb
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -623,6 +623,80 @@
     }
    ],
    "source": [
+    "res_stats(res, expected_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ngram import NGramm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def to_str(r: Dict[Hashable, Any]) -> str:\n",
+    "  s = ''\n",
+    "  for k in column_names:\n",
+    "    if r[k] is not None and isinstance(r[k], str) and r[k] != '':\n",
+    "      s += r[k]\n",
+    "  return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ng = NGramm(data=data_list, to_str=to_str, n=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "found_records = [False for _ in range(len(data_list))]\n",
+    "inverted_idx = {}\n",
+    "for i in range(len(data_list)):\n",
+    "  inverted_idx[data_list[i]['rec_id']] = i\n",
+    "res: List[Tuple[Dict[Hashable, Any], Dict[Hashable, Any]]] = []\n",
+    "for d in data_list:\n",
+    "  if found_records[inverted_idx[d['rec_id']]]:\n",
+    "    continue\n",
+    "  found_records[inverted_idx[d['rec_id']]] = True\n",
+    "  qs = ng.query(d, 0.45)\n",
+    "  for q in qs:\n",
+    "    res.append((d, q))\n",
+    "    found_records[inverted_idx[q['rec_id']]] = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tp: 534, fp: 0, fn: 3\n",
+      "precision: 1.0\n",
+      "recall: 0.994413407821229\n",
+      "f1: 0.9971988795518207\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = ng.find_duplicates(0.45)\n",
     "res_stats(res, expected_res)"
    ]
   }
